# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../appexecfwk.gni")

config("bundlemgr_graphics_config") {
  include_dirs = [
    "include",
    "../../inner_api/appexecfwk_base/include",
  ]
}

ohos_shared_library("bundlemgr_graphics") {
  sources = [
    "src/bundle_graphics_client.cpp",
    "src/bundle_graphics_client_impl.cpp",
  ]

  configs = [ ":bundlemgr_graphics_config" ]

  defines = [
    "APP_LOG_TAG = \"BundleMgrService\"",
    "LOG_DOMAIN = 0xD001120",
  ]
  cflags = [ "-Os" ]
  cflags_cc = [ "-Os" ]
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  deps = [
    "${base_path}:appexecfwk_base",
    "${common_path}:libappexecfwk_common",
    "${core_path}:appexecfwk_core",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  public_external_deps = [ "json:nlohmann_json_static" ]
  subsystem_name = "bundlemanager"
  innerapi_tags = [ "platformsdk" ]
  part_name = "bundle_framework"
}
