# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/bundlemanager/bundle_framework/appexecfwk.gni")

group("ani_common") {
  deps = [ "common:bms_ani_common" ]
}

group("ani_bms_packages") {
  deps = [
    "bundle_manager:ability_info_etc",
    "bundle_manager:ani_bundle_manager",
    "bundle_manager:application_info_etc",
    "bundle_manager:bundle_info_etc",
    "bundle_manager:bundle_manager_etc",
    "bundle_manager:extension_ability_info_etc",
    "bundle_manager:hap_module_info_etc",
    "bundle_manager:metadata_etc",
    "bundle_manager:skill_etc",
    "launcher_bundle_manager:ani_launcher_bundle_manager",
    "launcher_bundle_manager:launcher_bundle_manager_etc",
    "resource_manager:ani_bundle_res_manager",
    "resource_manager:bundle_resource_info_etc",
    "resource_manager:bundle_resource_manager_etc",
    "shortcut_manager:ani_shortcut_manager",
    "shortcut_manager:shortcut_info_etc",
    "shortcut_manager:shortcut_manager_etc",
    "zlib:ani_zlib",
    "zlib:zlib_etc",
  ]
}
