# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../appexecfwk.gni")

group("napi_common") {
  deps = [ "common:bundle_napi_common" ]
}

group("napi_packages") {
  deps = []
  if (support_jsapi) {
    deps += [
      "app_control:appcontrol",
      "bundle_manager:bundlemanager",
      "bundle_monitor:bundlemonitor",
      "bundlemgr:bundle",
      "default_app:defaultappmanager",
      "free_install:freeinstall",
      "installer:installer",
      "launcher_bundle_manager:launcherbundlemanager",
      "launchermgr:innerbundlemanager",
      "package:package",
    ]
  }
}
