# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../srms.gni")

group("srms_target") {
  if (bundle_framework_graphics) {
    deps = [ ":libsrms" ]
  }
}

config("srms_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("libsrms") {
  sources = [
    "src/inner_service_info.cpp",
    "src/service_router_data_mgr.cpp",
    "src/service_router_mgr_service.cpp",
    "src/service_router_mgr_stub.cpp",
    "src/sr_common_event_subscriber.cpp",
    "src/sr_samgr_helper.cpp",
  ]

  defines = [
    "APP_LOG_TAG = \"ServiceRouterMgrService\"",
    "LOG_DOMAIN = 0xD001120",
  ]

  configs = [ ":srms_config" ]

  deps = [
    "${common_path}:libappexecfwk_common",
    "${srms_inner_api_path}:srms_fwk",
  ]

  external_deps = [
    "ability_base:session_info",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (account_enable) {
    external_deps += [ "os_account:os_account_innerkits" ]
    defines += [ "ACCOUNT_ENABLE" ]
  }

  subsystem_name = "bundlemanager"
  part_name = "bundle_framework"
}
