# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../appexecfwk.gni")

config("bundlemgr_test_config") {
  include_dirs = [
    "${inner_api_path}/appexecfwk_base/include",
    "${inner_api_path}/appexecfwk_base/include/distributed_manager",
    "${inner_api_path}/appexecfwk_base/include/free_install",
    "${inner_api_path}/appexecfwk_base/include/quick_fix",
    "${inner_api_path}/appexecfwk_core/include/bundlemgr",
    "${inner_api_path}/appexecfwk_core/include/distributed_manager",
    "${inner_api_path}/appexecfwk_core/include/free_install",
    "${appexecfwk_path}/services/bundlemgr/include/sandbox_app",
    "mock/include",
  ]

  if (bundle_framework_free_install) {
    include_dirs += [
      "${inner_api_path}/appexecfwk_base/include/aging",
      "${inner_api_path}/appexecfwk_base/include/distributed_manager",
      "${inner_api_path}/appexecfwk_base/include/free_install",
    ]
  }

  configs = [
    "${services_path}/bundlemgr:bundlemgr_common_config",
    "${common_path}:appexecfwk_common_config",
  ]
}

group("unittest") {
  testonly = true

  if (bundle_framework_graphics) {
    deps = [
      "unittest/bms_bundle_accesstokenid_test:unittest",
      "unittest/bms_bundle_app_control_test:unittest",
      "unittest/bms_bundle_crowdtesting_test:unittest",
      "unittest/bms_bundle_data_storage_test:unittest",
      "unittest/bms_bundle_default_app_test:unittest",
      "unittest/bms_bundle_dependencies_test:unittest",
      "unittest/bms_bundle_free_install_test:unittest",
      "unittest/bms_bundle_hap_verify_test:unittest",
      "unittest/bms_bundle_hsp_test:unittest",
      "unittest/bms_bundle_installer_test:unittest",
      "unittest/bms_bundle_kit_service_test:unittest",
      "unittest/bms_bundle_manager_test:unittest",
      "unittest/bms_bundle_parser_test:unittest",
      "unittest/bms_bundle_permission_grant_test:unittest",
      "unittest/bms_bundle_quick_fix_boot_scanner_test:unittest",
      "unittest/bms_bundle_quick_fix_deleter_test:unittest",
      "unittest/bms_bundle_quick_fix_manager_test:unittest",
      "unittest/bms_bundle_quick_fix_query_test:unittest",
      "unittest/bms_bundle_quick_fix_switcher_test:unittest",
      "unittest/bms_bundle_quick_fix_test:unittest",
      "unittest/bms_bundle_resource_manager_test:unittest",
      "unittest/bms_bundle_sandbox_app_test:unittest",
      "unittest/bms_bundle_uninstaller_test:unittest",
      "unittest/bms_bundle_updater_test:unittest",
      "unittest/bms_data_mgr_test:unittest",
      "unittest/bms_install_daemon_test:unittest",
      "unittest/bms_patch_parser_test:unittest",
      "unittest/bms_rdb_data_manager_test:unittest",
      "unittest/bms_service_bundle_scan_test:unittest",
      "unittest/bms_service_startup_test:unittest",
      "unittest/bms_syscap_tool_test:unittest",
    ]
  }
}
