# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../appexecfwk.gni")

module_output_path = "bundle_framework/benchmark/bundle_framework"

ohos_benchmarktest("BenchmarkTestBundleMgrProxy") {
  module_out_path = module_output_path
  include_dirs = [ "//third_party/json/include" ]

  sources = [ "bundlemgr_proxy_test.cpp" ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${services_path}/test/moduletest/utils:tool_common",
    "//third_party/benchmark:benchmark",
  ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  if (bundle_framework_graphics) {
    defines = [ "BUNDLE_FRAMEWORK_GRAPHICS" ]
    external_deps += [ "multimedia_image_framework:image_native" ]
  }
}

group("benchmarktest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":BenchmarkTestBundleMgrProxy",
  ]
}
