# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../services/bundlemgr/appexecfwk_bundlemgr.gni")

group("bundlemanagerfuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "bmsabilityinfofromjson_fuzzer:BMSAbilityInfoFromJsonFuzzTest",
    "bmsabilityinfomarshalling_fuzzer:BMSAbilityInfoMarshallingFuzzTest",
    "bmsabilityinfounmarshalling_fuzzer:BMSAbilityInfoUnmarshallingFuzzTest",
    "bmsaccounthelper_fuzzer:BMSAccountHelperFuzzTest",
    "bmsaddfirstinstallbundleinfo_fuzzer:BMSAddFirstInstallBundleInfoFuzzTest",
    "bmsaginghandlerchain_fuzzer:BMSAgingHandlerChainFuzzTest",
    "bmsagingrequest_fuzzer:BMSAgingRequestFuzzTest",
    "bmsagingutil_fuzzer:BMSAgingUtilFuzzTest",
    "bmsappcontrolhost_fuzzer:BMSAppControlHostFuzzTest",
    "bmsapplicationinfo_fuzzer:BMSApplicationInfoFuzzTest",
    "bmsappservicefwkinstaller_fuzzer:BMSAppServiceFwkInstallerFuzzTest",
    "bmsappservicefwkinstalleraddappprovisioninfo_fuzzer:BMSAppServiceFwkInstallerAddAppProvisionInfoFuzzTest",
    "bmsappservicefwkinstallerbeforeinstall_fuzzer:BMSAppServiceFwkInstallerBeforeInstallFuzzTest",
    "bmsappservicefwkinstallercheckandparsefiles_fuzzer:BMSAppServiceFwkInstallerCheckAndParseFilesFuzzTest",
    "bmsappservicefwkinstallercheckapplabelinfo_fuzzer:BMSAppServiceFwkInstallerCheckAppLabelInfoFuzzTest",
    "bmsappservicefwkinstallercheckfiletype_fuzzer:BMSAppServiceFwkInstallerCheckFileTypeFuzzTest",
    "bmsappservicefwkinstallergetinnerbundleinfo_fuzzer:BMSAppServiceFwkInstallerGetInnerBundleInfoFuzzTest",
    "bmsappservicefwkinstallerinnerprocessinstall_fuzzer:BMSAppServiceFwkInstallerInnerProcessInstallFuzzTest",
    "bmsappservicefwkinstallerprocessnativelibrary_fuzzer:BMSAppServiceFwkInstallerProcessNativeLibraryFuzzTest",
    "bmsbundlecloneinstaller_fuzzer:BmsBundleCloneInstallerFuzzTest",
    "bmsapplicationinfofromjson_fuzzer:BMSApplicationInfoFromJsonFuzzTest",
    "bmsbundlefileutil_fuzzer:BMSBundleFileUtilFuzzTest",
    "bmsbundleinfo_fuzzer:BMSBundleInfoFuzzTest",
    "bmsbundleinstallerhost_fuzzer:BMSBundleInstallerHostFuzzTest",
    "bmsbundleinstallerproxy_fuzzer:BMSBundleInstallerProxyFuzzTest",
    "bmsbundlemanagercallback_fuzzer:BMSBundleManagerCallbackFuzzTest",
    "bmsbundlemanagercallbackproxy_fuzzer:BMSBundleManagerCallbackProxyFuzzTest",
    "bmsbundlemanagercallbackstub_fuzzer:BMSBundleManagerCallbackStubFuzzTest",
    "bmsbundlemgrhost_fuzzer:BMSBundleMgrHostFuzzTest",
    "bmsbundlemgrproxyfuzzpartfourtest_fuzzer:BMSBundleMgrProxyFuzzPartFourTest",
    "bmsbundlemgrproxyfuzzpartonetest_fuzzer:BMSBundleMgrProxyFuzzPartOneTest",
    "bmsbundlemgrproxyfuzzpartthreetest_fuzzer:BMSBundleMgrProxyFuzzPartThreeTest",
    "bmsbundlemgrproxyfuzzparttwotest_fuzzer:BMSBundleMgrProxyFuzzPartTwoTest",
    "bmsbundlemultiuserinstaller_fuzzer:BMSBundleMultiUserInstallerFuzzTest",
    "bmsbundleoverlay_fuzzer:BMSBundleOverlayFuzzTest",
    "bmsbundleresourcedrawable_fuzzer:BMSBundleResourceDrawableFuzzTest",
    "bmsbundleresourcehost_fuzzer:BMSBundleResourceHostFuzzTest",
    "bmsbundlestatuscallbackproxy_fuzzer:BMSBundleStatusCallbackProxyFuzzTest",
    "bmsbundlestreaminstallerhost_fuzzer:BMSBundleStreamInstallerHostFuzzTest",
    "bmsbundlestreaminstallerproxy_fuzzer:BMSBundleStreamInstallerProxyFuzzTest",
    "bmsbundlesyscap_fuzzer:BMSBundleSysCapFuzzTest",
    "bmsbundleuserinfo_fuzzer:BMSBundleUserInfoFuzzTest",
    "bmsbundleusermgrhost_fuzzer:BMSBundleUserMgrHostFuzzTest",
    "bmsbundleusermgrproxy_fuzzer:BMSBundleUserMgrProxyFuzzTest",
    "bmscheckissystemappbyuid_fuzzer:BMSCheckIsSystemAppByUidFuzzTest",
    "bmscleanbundlecachefiles_fuzzer:BMSCleanBundleCacheFilesFuzzTest",
    "bmscleanbundledatafiles_fuzzer:BMSCleanBundleDataFilesFuzzTest",
    "bmscleancachecallbackproxy_fuzzer:BMSCleanCacheCallbackProxyFuzzTest",
    "bmscheckabilityenableinstall_fuzzer:BMSCheckAbilityEnableInstallFuzzTest",
    "bmscompatibleabilityinfo_fuzzer:BMSCompatibleAbilityInfoFuzzTest",
    "bmscompatibleapplicationinfo_fuzzer:BMSCompatibleApplicationInfoFuzzTest",
    "bmsconverttargetabilityinfo_fuzzer:BMSConvertTargetAbilityInfoFuzzTest",
    "bmsdeletefirstinstallbundleinfo_fuzzer:BMSDeleteFirstInstallBundleInfoFuzzTest",
    "bmsdriverinstaller_fuzzer:BMSDriverInstallerFuzzTest",
    "bmsextendresourcemanager_fuzzer:BMSExtendResourceManagerFuzzTest",
    "bmsextensionabilityinfo_fuzzer:BMSExtensionAbilityInfoFuzzTest",
    "bmsfirstinstallbundleinfo_fuzzer:BMSFirstInstallBundleInfoFuzzTest",
    "bmsforminfo_fuzzer:BMSFormInfoFuzzTest",
    "bmsfreeinstall_fuzzer:BMSFreeInstallFuzzTest001",
    "bmsfreeinstall_fuzzer:BMSFreeInstallFuzzTest002",
    "bmsfreeinstall_fuzzer:BMSFreeInstallFuzzTest003",
    "bmsfreeinstall_fuzzer:BMSFreeInstallFuzzTest004",
    "bmsgetabilitylabel_fuzzer:BMSGetAbilityLabelFuzzTest",
    "bmsgetappidbybundlename_fuzzer:BMSGetAppIdByBundleNameFuzzTest",
    "bmsgetapplicationinfo_fuzzer:BMSGetApplicationInfoFuzzTest",
    "bmsgetapplicationinfos_fuzzer:BMSGetApplicationInfosFuzzTest",
    "bmsgetapptype_fuzzer:BMSGetAppTypeFuzzTest",
    "bmsgetbundlearchiveinfo_fuzzer:BMSGetBundleArchiveInfoFuzzTest",
    "bmsgetbundlegids_fuzzer:BMSGetBundleGidsFuzzTest",
    "bmsgetbundlegidsbyuid_fuzzer:BMSGetBundleGidsByUidFuzzTest",
    "bmsgetbundleinfo_fuzzer:BMSGetBundleInfoFuzzTest",
    "bmsgetbundleinfos_fuzzer:BMSGetBundleInfosFuzzTest",
    "bmsgetbundleInfosbymetadata_fuzzer:BMSGetBundleInfosByMetaDataFuzzTest",
    "bmsgetbundlepackinfo_fuzzer:BMSGetBundlePackInfoFuzzTest",
    "bmsgetbundlesforuid_fuzzer:BMSGetBundlesForUidFuzzTest",
    "bmsgetdefaultapplication_fuzzer:BMSGetDefaultApplicationFuzzTest",
    "bmsgetdisposedstatus_fuzzer:BMSGetDisposedStatusFuzzTest",
    "bmsgethapmoduleinfo_fuzzer:BMSGetHapModuleInfoFuzzTest",
    "bmsgetlaunchwantforbundle_fuzzer:BMSGetLaunchWantForBundleFuzzTest",
    "bmsgetnameforuid_fuzzer:BMSGetNameForUidFuzzTest",
    "bmsgetpermissiondef_fuzzer:BMSGetPermissionDefFuzzTest",
    "bmshapmoduleinfo_fuzzer:BMSHapModuleInfoFuzzTest",
    "bmshmpbundleinstaller_fuzzer:BMSHmpBundleInstallerFuzzTest",
    "bmsinstalldloadcallback_fuzzer:BMSInstalldLoadCallbackFuzzTest",
    "bmsinstalldpermissionmgr_fuzzer:BMSInstalldPermissionMgrFuzzTest",
    "bmsinstalldservice_fuzzer:BMSInstalldServiceFuzzTest",
    "bmsinstallparam_fuzzer:BMSInstallParamFuzzTest",
    "bmsinstallpluginparam_fuzzer:BMSInstallPluginParamFuzzTest",
    "bmsisexistfirstinstallbundleinfo_fuzzer:BMSIsExistFirstInstallBundleInfoFuzzTest",
    "bmsnavigation_fuzzer:BMSNavigationFuzzTest",
    "bmsplugininstaller_fuzzer:BMSPluginInstallerFuzzTest",
    "bmsonqueryrpcidfinished_fuzzer:BMSOnQueryRpcIdFinishedFuzzTest",
    "bmsqueryabilityinfobyuri_fuzzer:BMSQueryAbilityInfoByUriFuzzTest",
    "bmsqueryabilityinfos_fuzzer:BMSQueryAbilityInfosFuzzTest",
    "bmsqueryabilityinfosbyuri_fuzzer:BMSQueryAbilityInfosByUriFuzzTest",
    "bmsqueryallabilityinfos_fuzzer:BMSQueryAllAbilityInfosFuzzTest",
    "bmsquerykeepalivebundleinfos_fuzzer:BMSQueryKeepAliveBundleInfosFuzzTest",
    "bmsqueryrpcidbyabilitytoservicecenter_fuzzer:BMSQueryRpcIdByAbilityToServiceCenterFuzzTest",
    "bmsquickfixchecker_fuzzer:BMSQuickFixCheckerFuzzTest",
    "bmsquickfixdeployer_fuzzer:BMSQuickFixDeployerFuzzTest",
    "bmsremoteabilityinfo_fuzzer:BMSRemoteAbilityInfoFuzzTest",
    "bmsshortcutvisibledatastoragerdb_fuzzer:BMSShortcutVisibleDataStorageRdbFuzzTest",
    "bmssendcallback_fuzzer:BMSSendCallbackFuzzTest",
    "bmsuninstalldatamgr_fuzzer:BMSUninstallDataMgrFuzzTest",
    "bmsverifymanagerhost_fuzzer:BMSVerifyManagerHostFuzzTest",
  ]

  if (bundle_framework_default_app) {
    deps += [
      "bmsdefaultapp_fuzzer:BMSDefaultAppFuzzTest",
      "bmsdefaultapphost_fuzzer:BMSDefaultAppHostFuzzTest"
    ]
  }

  if (bundle_framework_app_control) {
    deps += [
      "bmsaddappInstallcontrolrule_fuzzer:BMSAddAppInstallControlRuleFuzzTest",
      "bmsaddappjumpcontrolrule_fuzzer:BMSAddAppJumpControlRuleFuzzTest",
      "bmsaddapprunningcontrolrule_fuzzer:BMSAddAppRunningControlRuleFuzzTest",
      "bmsapprunningcontrolrule_fuzzer:BMSAppRunningControlRuleFuzzTest",
      "bmsapprunningcontrolruleresult_fuzzer:BMSAppRunningControlRuleResultFuzzTest",
      "bmsdeleteappinstallcontrolrule_fuzzer:BMSDeleteAppInstallControlRuleFuzzTest",
      "bmsdeleteapprunningcontrolrule_fuzzer:BMSDeleteAppRunningControlRuleFuzzTest",
      "bmsgetappinstallcontrolrule_fuzzer:BMSGetAppInstallControlRuleFuzzTest",
      "bmsgetapprunningcontrolrule_fuzzer:BMSGetAppRunningControlRuleFuzzTest",
    ]
  }
}